[package]
name = "jon-listen"
version = "0.1.0"
authors = ["cspinetta <cebs91@gmail.com>", "damdev <damian168@gmail.com>"]
license = "Apache-2.0"

[dependencies]
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
net2 = "0.2"

chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
time = "0.1"
glob = "0.2"
log = "0.3"
pretty_env_logger = "0.1"

regex = "0.2"

config = "0.7"
serde_derive = "1.0"
serde = "1.0"
toml = "0.4"

[dev-dependencies]
matches = "0.1"
