[package]
name = "jon-listen"
version = "0.1.0"
authors = ["cspinetta <cebs91@gmail.com>", "damdev <damian168@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
socket2 = "0.5"
bytes = "1"

chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
log = "0.4"
pretty_env_logger = "0.5"

regex = "1"

config = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

anyhow = "1.0"
thiserror = "1.0"

metrics = "0.16"
metrics-exporter-prometheus = "0.5"

[dev-dependencies]
matches = "0.1"
tempfile = "3.8"
